# GBA-Emulator

./: CMakeLists.txt  README.md
src/app/: CMakeLists.txt  main.c
src/lib/: CMakeLists.txt  chester.c  chester.h  chester_internal.h  cpu.c  cpu.h  cpu_inline.h  gpu.c  gpu.h  interrupts.c  interrupts.h  keys.c  keys.h  loader.c  loader.h  logger.c  logger.h  memory_inline.h  mmu.c  mmu.h  save.c  save.h  sync.c  sync.h  timer.c  timer.h
